stylesheets/main.css
* {
  margin: 0;
  padding: 0;
  list-style: none;
  font-family: sans-serif;
}

body {
  background-color: #050307;
}

.appBox {
  width: 100%;
  height: 600px;
  display: block;
  margin: 50px auto;
  background-color: #0C0C0C;
}
.spaceZone {
  width: 100%;
  height: 500px;
  height: 550px;
  position: absolute;
  top: 100px;
}
.chatBar{
  background-color: #EDE8ED;
  width: 100%;
  display: flex;
  line-height: 50px;
  color: #666;
  position: absolute;
  bottom: 0px;
}

.handleBar {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 80px;
  color: #00AED6;
  background-color: #050307;
  clear: both;
}
.youAreText {
  width: 100%;
  margin-top: 20px;
  display: flex;
  justify-content: center;
}
.changeUserName {
  width: 20px;
  height: 25px;
  color: red;
  position: absolute;
  display: flex;
  top: 40px;
  right: 20px;
  opacity: .6;
}

.changeUserName:hover {
  opacity: 1;
}

.messageContainer:hover {
  background-color: rgba(0, 0, 0, 0.5);
}

.textField {
  width: 70%;
  height: 100%;
  margin: 0 auto;
  margin-top: -80px;
  display: block;
  overflow: scroll;
  transform: perspective(500px) rotateX(35deg) rotateY(0deg) scale(1);
}
.messageContent {
  color: #F8CA00;
  width: 80%;
  display: flex;
  margin: 0 auto;
  margin-bottom: 10px;

}

.messageContainer {
  width: 100%;
  display: block;
  margin-bottom: 10px;
}

.messageCreator {
  color: #919A9B;
  width: 20%;
  margin: 0 auto;
  margin-bottom: 12px;
}
.trash {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 98%;
}
.chatTextBox {
  width: 100%;
  height: 80px;
  border-radius: 0;
  font-size: 1.5em;
}

.landingPage {
  width: 100%;
  height: 100%;
  background-color: #0C0C0C;
  display: flex;
  align-items: center;
  justify-content: center;
}


.usernameTextBox {
  width: 50%;
  height: 100px;
  background-color: #0C0C0C;
  border-radius: 6px;
  display: flex;
  text-align: center;
  font-size: 3em;
  color: white;
}

input {
  color: black;
  background-color: #EDE8ED;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;


}

.fa-trash-o{
  margin-right: 10px;
}

a{
  color: red;
  text-decoration: none;
}

.changeUserName a{
  text-decoration: none;
  font-size: 1.5em;
}

.usersLoggedIn{
  float:left;
  margin-top: 20px;
}

h3{
  color: white;
  text-align: center;
  margin: 5px;
  border-top: 1px solid grey
}

.listOfOtherUsers{
  width: 100%;
  color: white;
}

.listOfOtherUsers li{
  margin: 5px;

}
.hide {
  display: none;
}

